# python-autopxd2

./: .dockerignore  .gitignore  .lintballrc.json  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  regenerate_stubs.py  setup.cfg  setup.py  versions.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: docker.yml  docs.yml  lint.yml  momus.yml  pr-agent.yml  pre-commit-autoupdate.yml  pre-commit.yml  publish.yml  test.yml
3.0.0/: 404.html  index.html  sitemap.xml
3.0.0/api/: index.html
3.0.0/api/backends/: index.html
3.0.0/api/ir/: index.html
3.0.0/contributing/: index.html
3.0.0/getting-started/docker/: index.html
3.0.0/getting-started/installation/: index.html
3.0.0/getting-started/quickstart/: index.html
3.0.0/search/: search_index.json
3.0.0/user-guide/backends/: index.html
3.0.0/user-guide/cli/: index.html
3.0.0/user-guide/cpp/: index.html
3.1.1/: 404.html  index.html  sitemap.xml
3.1.1/api/: index.html
3.1.1/api/backends/: index.html
3.1.1/api/ir/: index.html
3.1.1/contributing/: index.html
3.1.1/getting-started/docker/: index.html
3.1.1/getting-started/installation/: index.html
3.1.1/getting-started/quickstart/: index.html
3.1.1/user-guide/backends/: index.html
3.1.1/user-guide/cli/: index.html
3.1.1/user-guide/cpp/: index.html
3.2.1/: 404.html  index.html  sitemap.xml
3.2.1/api/: index.html
3.2.1/api/backends/: index.html
3.2.1/api/ir/: index.html
3.2.1/contributing/: index.html
3.2.1/getting-started/docker/: index.html
3.2.1/getting-started/installation/: index.html
3.2.1/getting-started/quickstart/: index.html
3.2.1/user-guide/backends/: index.html
3.2.1/user-guide/cli/: index.html
3.2.1/user-guide/cpp/: index.html
3.2.2/: 404.html  index.html  sitemap.xml
3.2.2/api/: index.html
3.2.2/api/backends/: index.html
3.2.2/api/ir/: index.html
3.2.2/contributing/: index.html
3.2.2/getting-started/docker/: index.html
3.2.2/getting-started/installation/: index.html
3.2.2/getting-started/quickstart/: index.html
3.2.2/user-guide/backends/: index.html
3.2.2/user-guide/cli/: index.html
3.2.2/user-guide/cpp/: index.html
3.2.3/: 404.html  index.html  sitemap.xml
3.2.3/api/: index.html
3.2.3/api/backends/: index.html
3.2.3/api/ir/: index.html
3.2.3/contributing/: index.html
3.2.3/getting-started/docker/: index.html
3.2.3/getting-started/installation/: index.html
3.2.3/getting-started/quickstart/: index.html
3.2.3/search/: search_index.json
3.2.3/user-guide/backends/: index.html
3.2.3/user-guide/cli/: index.html
3.2.3/user-guide/cpp/: index.html
autopxd/: __init__.py  __main__.py  cython_types.py  declarations.py  ir.py  ir_writer.py  keywords.py  nodes.py  writer.py
autopxd/backends/: __init__.py  libclang_backend.py  pycparser_backend.py
autopxd/stubs/: __init__.py  arpa_inet.pxd  cpparray.pxd  cppbitset.pxd  cppchrono.pxd  cppfilesystem.pxd  cppregex.pxd  cppthread.pxd  cpptuple.pxd  cppvariant.pxd  dirent.pxd  netdb.pxd  netinet_in.pxd  pthread.pxd  regex.pxd  semaphore.pxd  stdarg.pxd  stdatomic.pxd  sys_socket.pxd  sys_statvfs.pxd  sys_un.pxd  termios.pxd
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/api/backends/: index.html
dev/api/ir/: index.html
dev/contributing/: index.html
dev/getting-started/docker/: index.html
dev/getting-started/installation/: index.html
dev/getting-started/quickstart/: index.html
dev/search/: search_index.json
dev/user-guide/backends/: index.html
dev/user-guide/cli/: index.html
dev/user-guide/cpp/: index.html
docs/: comparison.md  contributing.md  index.md
docs/api/: backends.md  index.md  ir.md
docs/getting-started/: docker.md  installation.md  quickstart.md
docs/user-guide/: backends.md  cli.md  cpp.md
scripts/: install-test-libs-linux.sh  install-test-libs-macos.sh
test/: __init__.py  assertions.py  conftest.py  cython_utils.py  header_cache.py  library_detection.py  test_auto_import_integration.py  test_autopxd.py  test_backend_properties.py  test_cli.py  test_compile_time_expressions.py  test_cpp_auto_import.py  test_cpp_features.py  test_cython_types.py  test_dependency_resolution.py  test_integration.py  test_ir.py  test_ir_writer.py  test_ir_writer_cimports.py  test_libclang_backend.py  test_libclang_includes.py  test_macro_extraction.py  test_meta_headers.py  test_operator_aliasing.py  test_parsing.py  test_pycparser_backend.py  test_real_headers.py  test_realistic_headers.py  test_stubs.py  test_template_edge_cases.py  test_type_qualifiers.py  test_types.py  test_umbrella_headers.py
test/fixtures/: realistic_headers.py
test/fixtures/realistic_headers/: compression_lib.expected.pxd  cpp_container.expected.pxd  database_lib.expected.pxd  json_lib.expected.pxd  network_protocol.expected.pxd
test/real_headers/: jansson.expected.pxd  jansson_config.h  sample_cpp.hpp  simple_c.expected.pxd  simple_c.h  simple_cpp.expected.pxd  simple_cpp.hpp  templates.expected.pxd  templates.hpp  zlib.expected.pxd
test/real_headers/fusion_sample/: feature_a.h  feature_b.h  feature_c.h  meta_header_simple.expected.pxd  (+3 more)
test/regressions/: test_regressions.py
test/test_files/: anonymous_enum.test  array_dimensions.test  array_simple.test  bar_baz.h  c_qualifiers.test  cpp_class_basic.cpptest  cpp_class_methods.cpptest  cpp_mixed.cpptest  cpp_struct.cpptest  empty_block.test  enum.test  enum_integer_bases.test  enum_referencing_another_enum.test  forward_empty_struct.test  funcdef.test  globals.test  inline_proto_nested.test  inline_proto_struct.test  keywords.test  nested.test  nested_anonymous_enum.test  nested_anonymous_struct.test  nested_simple.test  nested_simple_named.test  nested_union.test  no_declarations.test  proto.test  struct.test  tux_foo.h  typedef_anonymous_enum.test  typedef_anonymous_struct.test  typedef_anonymous_union.test  typedef_enum.test  typedef_enum_alt.test  typedef_proto.test  union.test  whitelist.test  whitelist2.test  xnvme_opts.test
(+12 files in other folders)
