[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopxd2"
version = "2.5.0"
description = "Automatically generate Cython pxd files from C headers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "elijahr", email = "elijahr+autopxd2@gmail.com" },
  { name = "Emmanuel Leblond", email = "emmanuel.leblond@gmail.com" },
  { name = "Gabriel de Marmiesse", email = "gabrieldemarmiesse@gmail.com" },
  { name = "Thiago de Arruda", email = "tpadilha84@gmail.com" },
]
urls = { "Homepage" = "https://github.com/elijahr/python-autopxd2" }
keywords = ["autopxd", "autopxd2", "cython", "code-generators"]
classifiers = [
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Code Generators",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Cython",
  "Programming Language :: C",
  "Programming Language :: C++",
]
dependencies = ["Click", "pycparser"]

[project.optional-dependencies]
dev = ["pytest", "cython", "pre-commit", "ruff", "mypy"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
libclang = ["clang"]
all = ["autopxd2[dev,docs,libclang]"]

[project.scripts]
autopxd = "autopxd:cli"

[tool.setuptools.package-data]
autopxd = [
  "stubs/include/*",
  "stubs/include/**/*",
  "stubs/darwin-include/*",
  "stubs/darwin-include/**/*",
]

[tool.black]
# black-compatible configurations for various Python code formatters.
# Assembled from https://black.readthedocs.io/en/stable/compatible_configs.html
line_length = 120
preview = true

[tool.autopep8]
exclude = ".git,__pycache__"
max-line-length = 120
ignore = "E203,E501,W6"

[tool.isort]
profile = "black"
known_first_party = "autopxd"
known_third_party = ["click", "pycparser", "pytest", "Cython", "libc"]
# line_length is intentionally small, to ensure each imported object gets its
# own line.
line_length = 10
multi_line_output = 3
include_trailing_comma = true

[tool.pylint]
max-line-length = 120
disable = [
  "missing-class-docstring",
  "missing-module-docstring",
  "import-error",
  "invalid-name",
  "missing-function-docstring",
  "too-many-arguments",
  "too-few-public-methods",
  "too-many-branches",
  "consider-using-f-string",
  "unused-import",
  "duplicate-code",
]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ARG002", # unused arguments - common in method overrides
    "B008",   # do not perform function calls in argument defaults
    "C408",   # dict() vs {} is stylistic
    "SIM102", # nested if sometimes more readable
    "SIM103", # return condition directly - sometimes less clear
    "SIM105", # try/except/pass clearer than contextlib.suppress for imports
    "SIM108", # use ternary operator instead of if-else
    "SIM110", # for loop with return sometimes clearer than any()
    "SIM112", # Windows env vars need exact case for compatibility
    "UP007",  # Union vs | annotation - keep Union for compatibility
    "UP035",  # typing.Dict etc - keep for Python 3.9 compatibility
    "UP038",  # isinstance(x, (A, B)) clearer than isinstance(x, A | B)
]

[tool.ruff.lint.isort]
known-first-party = ["autopxd"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["ARG"]  # unused arguments common in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["build", "dist"]
