[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopxd2"
version = "3.2.2"
description = "Automatically generate Cython pxd files from C headers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "elijahr", email = "elijahr+autopxd2@gmail.com" },
  { name = "Emmanuel Leblond", email = "emmanuel.leblond@gmail.com" },
  { name = "Gabriel de Marmiesse", email = "gabrieldemarmiesse@gmail.com" },
  { name = "Thiago de Arruda", email = "tpadilha84@gmail.com" },
]
urls = { "Homepage" = "https://github.com/elijahr/python-autopxd2" }
keywords = ["autopxd", "autopxd2", "cython", "code-generators"]
classifiers = [
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Code Generators",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Cython",
  "Programming Language :: C",
  "Programming Language :: C++",
]
requires-python = ">=3.10"
dependencies = ["Click", "pycparser"]

[project.optional-dependencies]
# libclang backend (C++ support)
# Note: clang2 version must match system libclang version
# e.g., for LLVM 18: pip install 'autopxd2[libclang]' clang2==18.*
libclang = ["clang2"]

# Testing
test = ["pytest", "pytest-timeout", "cython"]

# Linting and type checking
lint = ["ruff", "mypy", "pre-commit"]

# Documentation
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mike>=2.0",
]

# Development (all tools)
dev = ["autopxd2[test,lint,docs]"]

[project.scripts]
autopxd = "autopxd:cli"

[tool.setuptools.packages.find]
include = ["autopxd", "autopxd.*"]

[tool.setuptools.package-data]
autopxd = [
  "stubs/*.pxd",
  "stubs/include/*",
  "stubs/include/**/*",
  "stubs/darwin-include/*",
  "stubs/darwin-include/**/*",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ARG002", # unused arguments - common in method overrides
    "B008",   # do not perform function calls in argument defaults
    "C408",   # dict() vs {} is stylistic
    "SIM102", # nested if sometimes more readable
    "SIM103", # return condition directly - sometimes less clear
    "SIM105", # try/except/pass clearer than contextlib.suppress for imports
    "SIM108", # use ternary operator instead of if-else
    "SIM110", # for loop with return sometimes clearer than any()
    "SIM112", # Windows env vars need exact case for compatibility
    "UP007",  # Union vs | annotation - keep Union for compatibility
    "UP035",  # typing.Dict etc - stylistic preference
    "UP038",  # isinstance(x, (A, B)) clearer than isinstance(x, A | B)
]

[tool.ruff.lint.isort]
known-first-party = ["autopxd"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["ARG"]  # unused arguments common in tests

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["build", "dist"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "pycparser: tests/parameterizations using the pycparser backend",
    "libclang: tests/parameterizations using the libclang backend (includes C++ tests)",
    "real_headers: tests against real system libraries (requires library installation)",
]
