[metadata]
name = autopxd2
author = Elijah Shaw-Rutschman
author_email = elijahr+autopxd2@gmail.com
url = https://github.com/elijahr/python-autopxd2
license = MIT
license_files = LICENSE
version = attr: autopxd.__version__
description = Automatically generate Cython pxd files from C headers
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
keywords = autopxd, autopxd2, cython, code-generators
classifiers =
  Topic :: Software Development :: Compilers
  Topic :: Software Development :: Code Generators
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Cython
  Programming Language :: C
  Programming Language :: C++

[options]
packages = autopxd
python_requires = >=3.6, <4
install_requires =
  Click
  pycparser

[options.extras_require]
dev =
  pytest
  cython

[options.entry_points]
console_scripts =
  autopxd = autopxd:cli

[options.package_data]
autopxd=include/*,include/**/*,darwin-include/*,darwin-include/**/*




